--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 <meta property="og:title" content="😁सबै पुरुषहरूको लागि खुसीको खबर।🍆">
 <meta property="og:description" content="👍कुनै पनि केटी तिम्रो हुनेछ!✅">
-<meta property="og:image" content="https://i.ibb.co/g760N9W/499b7ac59bdc.png">
+<meta property="og:image" content="https://i.ibb.co/71Zj7YW/6413e15586b8.png">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
